--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,7 +9,7 @@ environment:
   flutter: ">=1.17.0"
 
 dependencies:
-  get: ^4.5.1
+  get: 4.3.8
   fluent_validation:
     git: https://github.com/bernardoveras/fluent_validation.git
   kayta_flutter:
