--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,11 +5,11 @@ version: 1.0.0
 homepage:
 
 environment:
-  sdk: ">=2.13.0 <3.0.0"
+  sdk: ">=2.17.1 <3.0.0"
   flutter: ">=1.17.0"
 
 dependencies:
-  get: 4.3.8
+  get: ^4.6.5
   fluent_validation:
     git: https://github.com/bernardoveras/fluent_validation.git
   kayta_flutter:
